<resources>
    <string name="app_name">Aplikasi Pertama</string>
    <string name="var1">LOGIN</string>
    <string name="eEmail">Masukan Email</string>
    <string name="ePassword">Masukan Password</string>
    <string name="bSigin">SIGN-IN</string>

    <string name="tdata">Data Anda</string>
    <string name="tEmail">Email: </string>
    <string name="tPassword">Password: </string>
    <string name="txemail">Ini Hasil Email</string>
    <string name="txpassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="IDaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>

    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
</resources>